add fiew types of resume
